[package]
name = "syncrs"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bincode = "1.3.3"
bytes = "1.9.0"
clap = { version = "4.5.18", features = ["derive"] }
env_logger = "0.11.5"
filetime = "0.2.25"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
sha2 = "0.10.8"
thiserror = "1.0.64"
tokio = { version = "1.42.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["codec"] }
walkdir = "2.5.0"
